# next-runner

./: .gitignore  Cargo.toml  README.md  flake.nix  install.sh  justfile  next-runner.desktop  next-runner.service  restart-krunner.sh  runner.py  uninstall.sh  xg-runner.desktop  xg-runner.service
src/: main.rs
