[package]
name = "my-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
